--- a/app/src/main/res/layout/activity_input_details.xml
+++ b/app/src/main/res/layout/activity_input_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFCC00"
+    android:background="#F3F2F0"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".SignUpPage">
@@ -55,8 +55,9 @@
         android:layout_width="175dp"
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
-        android:backgroundTint="#4CAF50"
+        android:backgroundTint="#1185B9"
        app:cornerRadius="45dp"
+        android:elevation="18dp"
         android:text="finish"
         android:textAlignment="center"
         android:textColor="#0F0F0F"
