--- a/app/src/main/res/layout/activity_input_screen.xml
+++ b/app/src/main/res/layout/activity_input_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFCC00"
+    android:background="#FFFFFF"
     android:orientation="vertical"
     android:gravity="center"
     android:padding="20dp"
@@ -61,7 +61,7 @@ app:cornerRadius="45dp"
         style="@style/Widget.MaterialComponents.Button"
 
         android:text="Enter with phone number"
-        android:backgroundTint="#4CAF50"
+        android:backgroundTint="#2B8FBD"
         android:textAlignment="center"
         android:textColor="#070000"
         android:textSize="20sp"
