--- a/app/src/main/res/layout/activity_user_auto_complete_adress.xml
+++ b/app/src/main/res/layout/activity_user_auto_complete_adress.xml
@@ -60,10 +60,10 @@ tools:context=".UserAutoCompleteAdress">
         android:layout_width="match_parent"
         android:layout_height="match_parent"></com.dingi.dingisdk.maps.MapView>
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_gravity="center"
-        android:src="@drawable/ic_select_pin"
+        android:src="@drawable/deliverymapicon"
         />
 
 <androidx.cardview.widget.CardView
@@ -87,7 +87,8 @@ tools:context=".UserAutoCompleteAdress">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="CONFIRM"
-            android:textColor="@color/colorPrimary"
+            android:textColor="#090808"
+            android:backgroundTint="@color/colorPrimary"
             />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
