--- a/app/src/main/res/layout/activity_apply_promo_page.xml
+++ b/app/src/main/res/layout/activity_apply_promo_page.xml
@@ -50,6 +50,7 @@
             android:text="CANCEL"
             android:textStyle="bold"
             android:background="@color/colorPrimary"
+            android:backgroundTint="@color/colorPrimary"
             android:textColor="@android:color/white"
             android:layout_height="wrap_content" />
         <Button
@@ -58,7 +59,7 @@
             android:layout_margin="5dp"
             android:text="APPLY"
             android:textStyle="bold"
-            android:background="@color/colorPrimary"
+            android:backgroundTint="@color/colorPrimary"
             android:textColor="@android:color/white"
             android:layout_height="wrap_content" />
     </LinearLayout>
