--- a/app/src/main/res/layout/activity_group_friend_add.xml
+++ b/app/src/main/res/layout/activity_group_friend_add.xml
@@ -48,7 +48,7 @@
             android:layout_margin="5dp"
             android:text="CANCEL"
             android:textStyle="bold"
-            android:background="@color/colorPrimary"
+            android:backgroundTint="@color/colorPrimary"
             android:textColor="@android:color/white"
             android:layout_height="wrap_content" />
         <Button
@@ -58,7 +58,7 @@
             android:layout_margin="5dp"
             android:text="ADD"
             android:textStyle="bold"
-            android:background="@color/colorPrimary"
+            android:backgroundTint="@color/colorPrimary"
             android:textColor="@android:color/white"
             android:layout_height="wrap_content" />
     </LinearLayout>
