--- a/app/src/main/res/layout/activity_ppeep_ride_webview.xml
+++ b/app/src/main/res/layout/activity_ppeep_ride_webview.xml
@@ -6,16 +6,24 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".PPeepRideWebview">
-    <androidx.appcompat.widget.Toolbar
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="55dp"
-        app:title="PPEEP Ride"
-        android:gravity="center"
-        android:theme="@style/AppTheme2"
-        android:id="@+id/foodtoolbar"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:elevation="10dp">
 
-        android:background="@color/colorPrimary">
-    </androidx.appcompat.widget.Toolbar>
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            app:title="P-PEEP"
+            app:titleTextColor="#ffcc00"
+            android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
+            app:popupTheme="@style/Theme.AppCompat.Light"
+            android:id="@+id/foodapptoolbar"
+            android:elevation="10dp"
+            />
+
+    </com.google.android.material.card.MaterialCardView>
 
     <WebView
         android:id="@+id/webview1"
