--- a/app/src/main/res/layout/activity_pre_order_time_select.xml
+++ b/app/src/main/res/layout/activity_pre_order_time_select.xml
@@ -56,7 +56,7 @@
         android:gravity="center"
         android:layout_marginBottom="2dp"
         android:layout_marginTop="5dp"
-        android:background="#EB0707" />
+        android:backgroundTint="#4CAF50" />
 
 
 </LinearLayout>
