--- a/app/src/main/res/layout/activity_profile_gender_edit.xml
+++ b/app/src/main/res/layout/activity_profile_gender_edit.xml
@@ -63,7 +63,7 @@
             android:layout_margin="5dp"
             android:text="CANCEL"
             android:textStyle="bold"
-            android:background="@color/colorPrimary"
+            android:backgroundTint="@color/colorPrimary"
             android:textColor="@android:color/white"
             android:layout_height="wrap_content" />
         <Button
@@ -72,7 +72,7 @@
             android:layout_margin="5dp"
             android:text="UPDATE"
             android:textStyle="bold"
-            android:background="@color/colorPrimary"
+            android:backgroundTint="@color/colorPrimary"
             android:textColor="@android:color/white"
             android:layout_height="wrap_content" />
     </LinearLayout>
