--- a/app/src/main/res/layout/activity_apply_promo_page.xml
+++ b/app/src/main/res/layout/activity_apply_promo_page.xml
@@ -51,7 +51,7 @@
             android:textStyle="bold"
             android:background="@color/colorPrimary"
             android:backgroundTint="@color/colorPrimary"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:layout_height="wrap_content" />
         <Button
             android:layout_width="200dp"
@@ -60,7 +60,7 @@
             android:text="APPLY"
             android:textStyle="bold"
             android:backgroundTint="@color/colorPrimary"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
