--- a/app/src/main/res/layout/activity_group_friend_add.xml
+++ b/app/src/main/res/layout/activity_group_friend_add.xml
@@ -49,7 +49,7 @@
             android:text="CANCEL"
             android:textStyle="bold"
             android:backgroundTint="@color/colorPrimary"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:layout_height="wrap_content" />
         <Button
             android:id="@+id/bt_add_friend"
@@ -58,8 +58,9 @@
             android:layout_margin="5dp"
             android:text="ADD"
             android:textStyle="bold"
+
             android:backgroundTint="@color/colorPrimary"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
