--- a/app/src/main/res/layout/activity_order_submit_complete.xml
+++ b/app/src/main/res/layout/activity_order_submit_complete.xml
@@ -74,10 +74,12 @@
         android:layout_marginBottom="10dp"
 
         />
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:visibility="visible"
+        android:orientation="horizontal"
+        android:gravity="center"
         android:layout_margin="4dp">
 
         <ImageView
@@ -89,9 +91,10 @@
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_width="match_parent"
+            android:layout_width="240dp"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
+
             android:background="@drawable/friendlist_name_bg"
             android:layout_toRightOf="@+id/iv_driver_image"
             android:layout_alignParentRight="true"
@@ -128,9 +131,14 @@
 
 
         </LinearLayout>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/callDriverId"
+            android:src="@drawable/com_accountkit_get_call"/>
 
 
-    </RelativeLayout>
+    </LinearLayout>
 
 
 </LinearLayout>
