--- a/app/src/main/res/layout/activity_profile_address_edit.xml
+++ b/app/src/main/res/layout/activity_profile_address_edit.xml
@@ -43,7 +43,7 @@
             android:text="CANCEL"
             android:textStyle="bold"
             android:backgroundTint="@color/colorPrimary"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:layout_height="wrap_content" />
 
         <Button
@@ -54,7 +54,7 @@
             android:text="UPDATE"
             android:textStyle="bold"
             android:backgroundTint="@color/colorPrimary"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:layout_height="wrap_content" />
     </LinearLayout>
     <ProgressBar
