--- a/app/src/main/res/layout/activity_profile_email_edit.xml
+++ b/app/src/main/res/layout/activity_profile_email_edit.xml
@@ -40,7 +40,7 @@
             android:text="CANCEL"
             android:textStyle="bold"
             android:backgroundTint="@color/colorPrimary"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:layout_height="wrap_content" />
         <Button
             android:id="@+id/emailUpdateButton"
@@ -50,7 +50,7 @@
             android:text="UPDATE"
             android:textStyle="bold"
             android:backgroundTint="@color/colorPrimary"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:layout_height="wrap_content" />
     </LinearLayout>
     <ProgressBar
