--- a/app/src/main/res/layout/activity_profile_gender_edit.xml
+++ b/app/src/main/res/layout/activity_profile_gender_edit.xml
@@ -64,7 +64,7 @@
             android:text="CANCEL"
             android:textStyle="bold"
             android:backgroundTint="@color/colorPrimary"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:layout_height="wrap_content" />
         <Button
             android:layout_width="200dp"
@@ -73,7 +73,7 @@
             android:text="UPDATE"
             android:textStyle="bold"
             android:backgroundTint="@color/colorPrimary"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
