--- a/app/src/main/res/layout/activity_tab_fragment_recommended.xml
+++ b/app/src/main/res/layout/activity_tab_fragment_recommended.xml
@@ -282,5 +282,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
 android:backgroundTint="#ffcc00"
+        android:textColor="@android:color/black"
         android:text="Order status"/>
 </RelativeLayout>
