--- a/app/src/main/res/layout/activity_user_auto_complete_adress.xml
+++ b/app/src/main/res/layout/activity_user_auto_complete_adress.xml
@@ -66,30 +66,53 @@ tools:context=".UserAutoCompleteAdress">
         android:src="@drawable/deliverymapicon"
         />
 
-<androidx.cardview.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="bottom">
+
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:textColor="#474530" />
-        <Button
-            android:layout_below="@+id/text"
-            android:id="@+id/btn_address_confirm"
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="CONFIRM"
-            android:textColor="#090808"
-            android:backgroundTint="@color/colorPrimary"
-            />
+            android:layout_alignParentBottom="true"
+            android:gravity="right"
+            android:layout_marginBottom="4dp"
+            android:orientation="vertical">
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                
+                android:layout_margin="10dp"
+/>
+<com.google.android.material.card.MaterialCardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+            <TextView
+                android:id="@+id/text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:textColor="#474530" />
+
+            <Button
+                android:id="@+id/btn_address_confirm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/text"
+                android:backgroundTint="@color/colorPrimary"
+                android:text="CONFIRM"
+                android:textColor="#090808" />
+    </LinearLayout>
+
+</com.google.android.material.card.MaterialCardView>
+        </LinearLayout>
+
     </RelativeLayout>
-</androidx.cardview.widget.CardView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
