current location icon

--- a/app/src/main/res/layout/activity_user_auto_complete_adress.xml
+++ b/app/src/main/res/layout/activity_user_auto_complete_adress.xml
@@ -84,7 +84,8 @@ tools:context=".UserAutoCompleteAdress">
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                
+                android:src="@drawable/gpsicon"
+                android:backgroundTint="#ffffff"
                 android:layout_margin="10dp"
 />
 <com.google.android.material.card.MaterialCardView
