--- a/app/src/main/res/layout/activity_history_page.xml
+++ b/app/src/main/res/layout/activity_history_page.xml
@@ -92,6 +92,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
-        android:id="@+id/historyrecycle"></androidx.recyclerview.widget.RecyclerView>
+        android:id="@+id/historyrecycle">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
