--- a/app/src/main/res/layout/activity_profile_gender_edit.xml
+++ b/app/src/main/res/layout/activity_profile_gender_edit.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="10dp"
-    tools:context=".ProfileGenderEdit">
+    tools:context=".ProfileGenderEdit"
+    android:id="@+id/sb_gender">
 
     <TextView
         android:layout_width="match_parent"
@@ -19,23 +20,24 @@
         />
 
     <RadioGroup
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:layout_marginTop="15dp"
         android:weightSum="1"
         android:id="@+id/radioGroup"
-     >
+        >
 
         <RadioButton
+            android:id="@+id/male"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Male"
-            android:checked="true"
+            android:checked="false"
             android:layout_marginLeft="30dp"
             />
 
         <RadioButton
+            android:id="@+id/female"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Female"
@@ -43,6 +45,7 @@
             android:layout_marginLeft="30dp"
             />
         <RadioButton
+            android:id="@+id/other"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Other"
@@ -58,6 +61,7 @@
         android:layout_margin="5dp"
         android:orientation="horizontal">
         <Button
+            android:id="@+id/cancelButton"
             android:layout_width="200dp"
             android:padding="5dp"
             android:layout_margin="5dp"
@@ -67,6 +71,7 @@
             android:textColor="@android:color/black"
             android:layout_height="wrap_content" />
         <Button
+            android:id="@+id/updateGender"
             android:layout_width="200dp"
             android:padding="5dp"
             android:layout_margin="5dp"
