--- a/app/src/main/res/layout/recycleview_history_page_design.xml
+++ b/app/src/main/res/layout/recycleview_history_page_design.xml
@@ -3,109 +3,129 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-
     tools:context=".HistoryPage">
 
-
-    <RelativeLayout
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="110dp"
-        android:layout_margin="10dp">
-
-        <ImageView
-            android:id="@+id/list_icon"
-            android:layout_width="80dp"
-            android:layout_height="90dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp"
-            android:src="@drawable/foodicon"
-            android:background="@drawable/friendlist_icon_bg" />
-
-        <LinearLayout
-            android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp">
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:background="@drawable/friendlist_name_bg"
-            android:layout_toRightOf="@+id/list_icon"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true">
+            android:layout_height="120dp"
+            android:layout_margin="10dp">
 
-            <TextView
-                android:id="@+id/tv_friend_name"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:textSize="26sp"
-                android:textStyle="bold"
-                android:paddingRight="16dp"
-                android:text="Kal Boishakhi" />
-
-            <TextView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_margin="5dp"
-                android:background="@drawable/orderdeliverbg"
-                android:padding="5dp"
-                android:text="Order Delivered" />
+            <ImageView
+                android:id="@+id/logo_image"
+                android:layout_width="80dp"
+                android:layout_height="90dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
+                android:src="@drawable/foodicon"
+                android:background="@drawable/friendlist_icon_bg" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_width="295dp"
+                android:layout_height="107dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginTop="3dp"
+                android:layout_marginEnd="0dp"
+                android:layout_marginRight="0dp"
+                android:layout_marginBottom="0dp"
+                android:layout_toRightOf="@+id/list_icon"
+                android:background="@drawable/friendlist_name_bg"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_order_Id"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="#001" />
 
-                    android:layout_width="fill_parent"
+                <TextView
+                    android:id="@+id/tv_restaurant_name"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    android:paddingRight="6dp"
-                    android:text="Date :" />
-                <TextView
-
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    android:paddingRight="6dp"
-                    android:text="01/07/2019" />
-
-                <TextView
-
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    android:layout_marginLeft="5dp"
-                    android:paddingRight="6dp"
-                    android:text="Time :" />
-
-                <TextView
-
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
                     android:paddingRight="16dp"
-                    android:text="12:04 PM" />
+                    android:text="Kal Boishakhi"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:singleLine="true"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    />
+
+
+                <TextView
+                    android:id="@+id/tv_order_status"
+                    android:layout_width="227dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:padding="5dp"
+                    android:text="Order Delivered"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:paddingRight="6dp"
+                        android:text="Date :"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tv_order_date"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:paddingRight="6dp"
+                        android:text="01/07/2019"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:paddingRight="6dp"
+                        android:text="Time :"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tv_order_time"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingRight="16dp"
+                        android:text="12:04 PM"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+
+                </LinearLayout>
 
 
             </LinearLayout>
 
 
-        </LinearLayout>
+        </RelativeLayout>
+
+    </com.google.android.material.card.MaterialCardView>
 
 
-    </RelativeLayout>
 
 </LinearLayout>
