--- a/app/src/main/res/layout/activity_food_cart_page.xml
+++ b/app/src/main/res/layout/activity_food_cart_page.xml
@@ -312,28 +312,32 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+android:layout_margin="10dp"
     android:gravity="center">
-            <CheckBox
-                android:id="@+id/pointcheckbox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
 
-                android:layout_centerHorizontal="true" />
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/userEmailTextInputLayout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_marginLeft="10dp"
+                android:layout_width="250dp"
                 android:layout_marginRight="10dp"
-
                 android:layout_height="wrap_content">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/userEmailTextInputEditText"
-                    android:layout_width="match_parent"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="80dp"
                     android:hint="Max point use per order 50" />
             </com.google.android.material.textfield.TextInputLayout>
+
+<com.google.android.material.button.MaterialButton
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:backgroundTint="#36A03C"
+    android:text="ADD +"
+    android:textColor="#0C0C0C"
+    />
+
 </LinearLayout>
 <TextView
     android:layout_width="match_parent"
