--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -22,7 +22,8 @@
             android:elevation="10dp">
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="?attr/actionBarSize"
+
     app:title="P-PEEP"
         android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
         app:popupTheme="@style/Theme.AppCompat.Light"
@@ -99,6 +100,8 @@ android:layout_alignParentBottom="true"
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="false"
+
         android:id="@+id/NavigationId2"
         android:background="#ffffffff"
         app:menu="@menu/drawermenu"
