--- a/app/src/main/res/layout/activity_food_cart_page.xml
+++ b/app/src/main/res/layout/activity_food_cart_page.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".FoodCartPage">
+    tools:context=".FoodCartPage"
+    android:id="@+id/sb_food_cart_page">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
@@ -239,6 +240,8 @@
                         android:text="Taka"/>
                 </LinearLayout>
 
+
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -265,14 +268,14 @@
                     android:gravity="center">
 
                     <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/userEmailTextInputLayout"
+                        android:id="@+id/userPointTextInputLayout"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="250dp"
                         android:layout_marginRight="10dp"
                         android:layout_height="wrap_content">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/userEmailTextInputEditText"
+                            android:id="@+id/userPointTextInputEditText"
                             android:layout_width="250dp"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="80dp"
@@ -280,6 +283,7 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.button.MaterialButton
+                        android:id="@+id/bt_add_point"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:backgroundTint="#36A03C"
