--- a/app/src/main/res/layout/activity_history_page.xml
+++ b/app/src/main/res/layout/activity_history_page.xml
@@ -25,7 +25,7 @@
             />
 
     </com.google.android.material.card.MaterialCardView>
- <ScrollView
+ <!--<ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -86,7 +86,7 @@
 
 
     </TableLayout>
-    </ScrollView>
+    </ScrollView>-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
