--- a/app/src/main/res/layout/notification_design.xml
+++ b/app/src/main/res/layout/notification_design.xml
@@ -3,9 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
-
-    >
+    android:gravity="center">
 
 
     <com.google.android.material.card.MaterialCardView
@@ -15,13 +13,12 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:gravity="center"
-         >
+            android:gravity="center">
 
             <ImageView
-                android:id="@+id/logo_image"
+                android:id="@+id/notification_image"
                 android:layout_width="80dp"
                 android:layout_height="90dp"
 
@@ -72,14 +69,13 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/tv_order_status"
+                    android:id="@+id/tv_notification_text"
                     android:layout_width="285dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:padding="5dp"
                     android:text="You have earned 30 points from your order."
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:textSize="13sp" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -98,7 +94,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/tv_order_date"
+                        android:id="@+id/tv_notification_date"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
@@ -117,7 +113,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/tv_order_time"
+                        android:id="@+id/tv_notification_time"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:paddingRight="16dp"
