--- a/app/src/main/res/layout/notification_design.xml
+++ b/app/src/main/res/layout/notification_design.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center">
+    android:layout_height="wrap_content">
 
 
     <com.google.android.material.card.MaterialCardView
@@ -62,10 +61,10 @@
                         android:maxLines="1"
                         />
 
-                <ImageView
+                <!--<ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:src="@drawable/crossicon"/>
+                    android:src="@drawable/crossicon"/>-->
                 </LinearLayout>
 
                 <TextView
