--- a/app/src/main/res/layout/foodapp_bottom_sheet.xml
+++ b/app/src/main/res/layout/foodapp_bottom_sheet.xml
@@ -12,7 +12,11 @@
 
 
 
-    <ImageView
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp">
+        <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#ffffff"
@@ -20,12 +24,8 @@
         android:src="@drawable/ic_drag_handle_black_24dp"
         android:text="Sheet 1"
         android:textColor="@android:color/white" />
+    </com.google.android.material.card.MaterialCardView>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Subtitle"
-        android:textColor="@android:color/white" />
+    <include layout="@layout/timelineview_vertical" />
 
 </LinearLayout>
